--- a/example/demos/one.html
+++ b/example/demos/one.html
@@ -1,8 +1,9 @@
 <div id="exampleOne" style="padding-top: 1em">
     <div class="container-fluid">
         <div class="row justify-content-md-center">
-            <div class="col col-lg-2">
-                <button go="button" type="button" class="btn btn-primary">example one</button>
+            <div class="col col-lg-4">
+                <p>An example where buttons update a target div.</p>
+                <button go="button" type="button" class="btn btn-primary">update</button>
                 <button go="reset" type="button" class="btn btn-warning">reset</button>
             </div>
             <div class="col-sm" go="div"></div>
