--- a/example/demos/one.html
+++ b/example/demos/one.html
@@ -3,8 +3,8 @@
         <div class="row justify-content-md-center">
             <div class="col col-lg-4">
                 <p>An example where buttons update a target div.</p>
-                <button go="button" type="button" class="btn btn-primary">update</button>
-                <button go="reset" type="button" class="btn btn-warning">reset</button>
+                <button data-go="button" type="button" class="btn btn-primary">update</button>
+                <button data-go="reset" type="button" class="btn btn-warning">reset</button>
             </div>
             <div class="col-sm" go="div"></div>
         </div>
