--- a/example/navbar/navbar.html
+++ b/example/navbar/navbar.html
@@ -7,8 +7,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul data-go="navigationItems" class="navbar-nav me-auto mb-2 mb-lg-0">
-            </ul>
+            <ul data-go="navigationItems" class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
             <form data-go="searchForm" class="d-flex mb-2 mb-lg-0" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
                 <button class="btn btn-outline-success" type="submit">Search</button>
